Fix grid sizing for modals on mobile

--- a/src/dog/grid/DrawdogGridModal.module.css
+++ b/src/dog/grid/DrawdogGridModal.module.css
@@ -11,25 +11,25 @@
 
 .grid {
 	display: grid;
-	grid-template-columns: repeat(2, auto);
+	grid-template-columns: repeat(2, 1fr);
 	justify-content: center;
 }
 
 @media (min-width: 801px) {
 	.grid {
-		grid-template-columns: repeat(2, auto);
+		grid-template-columns: repeat(2, 1fr);
 	}
 }
 
 @media (min-width: 1025px) {
 	.grid {
-		grid-template-columns: repeat(3, auto);
+		grid-template-columns: repeat(3, 1fr);
 	}
 }
 
 @media (min-width: 1281px) {
 	.grid {
-		grid-template-columns: repeat(5, auto);
+		grid-template-columns: repeat(5, 1fr);
 	}
 }
 
